Added specific error for max leased validation
